--- a/ModelLabsProjekat/ModelLabs/GUI/MainWindow.xaml
+++ b/ModelLabsProjekat/ModelLabs/GUI/MainWindow.xaml
@@ -1,75 +1,47 @@
-﻿<Window x:Class="GUI.MainWindow"
+﻿<Window x:Class="UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GUI"
+        xmlns:local="clr-namespace:UI"
         mc:Ignorable="d"
-        Title="Project24" Height="591.733" Width="863.544" Background="#2F384D">
-    <Grid Margin="0,0,0,1" RenderTransformOrigin="0.528,0.501" Background="#2F384D" HorizontalAlignment="Left" Width="888">
-
-
-        <TabControl Margin="0,0,477,0" Background="DarkGray">
-            <TabItem Background="DarkGray">
-                <TabItem.Header>
-                    <StackPanel>
-                        <TextBlock Text="Values"></TextBlock>
-                    </StackPanel>
-                </TabItem.Header>
-                <Grid Margin="0,0,-1,0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="27*"/>
-                        <ColumnDefinition Width="56*"/>
-                        <ColumnDefinition Width="90*"/>
-                        <ColumnDefinition Width="233*"/>
-                    </Grid.ColumnDefinitions>
-                    <Label x:Name="labelResourceId"  Content="Resource ID:" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="250" Margin="10,5,0,0" Height="23" Grid.ColumnSpan="4" />
-                    <ComboBox x:Name="comboBoxIdSelect" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="250" Margin="10,33,0,0" Initialized="comboBoxIdSelect_Initialized" SelectionChanged="comboBoxIdSelect_SelectionChanged" Grid.ColumnSpan="4"/>
-                    <Button x:Name="btnGetValues" Background="LightGray" Content="Get Values" HorizontalAlignment="Left" Margin="99.7,33,0,0" VerticalAlignment="Top" Width="123" Click="btnGetValues_Click" Grid.Column="3" Height="22"/>
-                    <ListBox x:Name="listBoxProperties" Background="LightGray" HorizontalAlignment="Left" Width="386" Margin="10,95,0,9.6" SelectionMode="Multiple" Initialized="listBoxProperties_Initialized" Grid.ColumnSpan="4" />
+        Title="ModelLabs" Height="486" Width="899">
+    <Grid>
+        <TabControl Margin="0,0,-1,-2">
+            <TabItem Header="Values">
+                <Grid Margin="0,-5,0,-7">
+                    <Label Content="GID:" Margin="20,28,727,373" RenderTransformOrigin="0.47,-0.38"/>
+                    <ComboBox Name="GIDs" HorizontalAlignment="Left" Margin="63,30,0,0" VerticalAlignment="Top" Width="198" SelectionChanged="GIDs_SelectionChanged"/>
+                    <Label Content="Properties:" Margin="20,75,694,330" RenderTransformOrigin="0.47,-0.38"/>
+                    <StackPanel Name="Properties" Margin="30,106,473,31"/>
+                    <Button Content="GetValues >" HorizontalAlignment="Left" Margin="340,212,0,0" VerticalAlignment="Top" Width="74" RenderTransformOrigin="0.52,0.775" Click="Button_Click_GetValues"/>
+                    <TextBox Name="Values" Margin="458,29,18,29" TextWrapping="Wrap" Text=""/>
                 </Grid>
             </TabItem>
-
-            <TabItem Background="DarkGray">
-                <TabItem.Header>
-                    <StackPanel>
-                        <TextBlock Text="Extent Values"></TextBlock>
-                    </StackPanel>
-                </TabItem.Header>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="15*"/>
-                        <ColumnDefinition Width="391*"/>
-                    </Grid.ColumnDefinitions>
-                    <Label x:Name="labelResourceIdExtent" Content="Class ModelCode:" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="250" Margin="10,5,0,0" Height="23" Grid.ColumnSpan="2" />
-                    <ComboBox x:Name="comboBoxModelSelect" HorizontalAlignment="Left"  Margin="10,33,0,0" VerticalAlignment="Top" Width="250" Initialized="comboBoxModelSelect_Initialized" Grid.ColumnSpan="2" SelectionChanged="comboBoxModelSelect_SelectionChanged"/>
-                    <Button x:Name="btnExtentValues" Background="LightGray" Content="Get Extent Values" HorizontalAlignment="Left" Margin="258.1,33,0,0" VerticalAlignment="Top" Width="123" Click="btnExtentValues_Click" Height="22" Grid.Column="1"/>
-                    <ListBox x:Name="listBoxPropertiesExtent" Background="LightGray" HorizontalAlignment="Left" Width="386" Margin="10,95,0,9.6" SelectionMode="Multiple" Initialized="listBoxPropertiesExtent_Initialized" Grid.ColumnSpan="2" />
+            <TabItem Header="ExtentValues">
+                <Grid Margin="0,-5,0,-7">
+                    <Label Content="DMSType:" Margin="20,28,688,370" RenderTransformOrigin="0.47,-0.38"/>
+                    <ComboBox Name="DMSTypes" HorizontalAlignment="Left" Margin="111,29,0,0" VerticalAlignment="Top" Width="198" SelectionChanged="DMSTypes_SelectionChanged"/>
+                    <Label Content="Properties:" Margin="20,75,694,315" RenderTransformOrigin="0.47,-0.38"/>
+                    <StackPanel Name="PropertiesExtent" Margin="30,106,473,31"/>
+                    <Button Content="GetExtentValues >" HorizontalAlignment="Left" Margin="332,212,0,0" VerticalAlignment="Top" Width="104" RenderTransformOrigin="0.52,0.775" Click="Button_Click_GetExtentValues"/>
+                    <TextBox Name="ValuesExtent" Margin="458,29,18,29" TextWrapping="Wrap" Text=""/>
                 </Grid>
             </TabItem>
-
-            <TabItem Background="DarkGray">
-                <TabItem.Header>
-                    <StackPanel>
-                        <TextBlock Text="Related Values" ></TextBlock>
-                    </StackPanel>
-                </TabItem.Header>
-                <Grid>
-                    <Label x:Name="labelResourceIdRelated" Content="Resource ID:" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="250" Margin="10,5,0,0" Height="23" />
-                    <ComboBox x:Name="comboBoxIdSelectRelated" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="250" Margin="10,33,0,0" Initialized="comboBoxIdSelectRelated_Initialized" SelectionChanged="comboBoxIdSelectRelated_SelectionChanged"/>
-                    <Button x:Name="btnGetRelatedValues" Background="LightGray" Content="Get Values" HorizontalAlignment="Left" Margin="273,33,0,0" VerticalAlignment="Top" Width="123" Click="btnGetRelatedValues_Click" Height="22" />
-                    <Label x:Name="labelAssPropertyCode" Content="Reference property code:" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="250" Margin="10,60,0,0" Height="29" />
-                    <ComboBox x:Name="comboBoxSelectAssType" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="250" Margin="10,89,0,0" Initialized="comboBoxSelectAssType_Initialized"/>
-                    <Label x:Name="labelAssType" Content="Type filter:" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="250" Margin="10,116,0,0" Height="36" />
-                    <ComboBox x:Name="comboBoxSelectAssFilter" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="250" Margin="10,147,0,0" Initialized="comboBoxSelectAssFilter_Initialized" SelectionChanged="comboBoxSelectAssFilter_SelectionChanged" />
-                    <ListBox x:Name="listBoxPropertiesRelated" Background="LightGray" HorizontalAlignment="Left" Width="386" Margin="10,183,0,9.6" SelectionMode="Multiple" Initialized="listBoxPropertiesRelated_Initialized" />
+            <TabItem Header="RelatedValues">
+                <Grid Margin="0,-5,0,-7">
+                    <Label Content="GID:" Margin="20,24,722,381" RenderTransformOrigin="0.47,-0.38"/>
+                    <ComboBox Name="GIDsRelated" HorizontalAlignment="Left" Margin="147,28,0,0" VerticalAlignment="Top" Width="198" SelectionChanged="RelatedGIDs_SelectionChanged"/>
+                    <Label Content="References:" Margin="19,62,641,337" RenderTransformOrigin="0.47,-0.38"/>
+                    <ComboBox Name="RelationalProps" HorizontalAlignment="Left" Margin="147,66,0,0" VerticalAlignment="Top" Width="198" SelectionChanged="RelationalProps_SelectionChanged"/>
+                    <Label Content="Related Type:" Margin="20,98,640,300" RenderTransformOrigin="0.47,-0.38"/>
+                    <ListBox Name="RelationalTypes" HorizontalAlignment="Left" Margin="147,102,0,0" VerticalAlignment="Top" Width="198" Height="22"/>
+                    <Label Content="Properties:" Margin="20,138,639,265" RenderTransformOrigin="0.47,-0.38"/>
+                    <StackPanel Name="PropertiesRelated" Margin="30,169,473,31"/>
+                    <TextBox Name="ValuesRelated" Margin="458,29,18,29" TextWrapping="Wrap" Text=""/>
+                    <Button Content="GetRelatedValues >" HorizontalAlignment="Left" Margin="325,212,0,0" VerticalAlignment="Top" Width="116" RenderTransformOrigin="0.52,0.775" Click="Button_Click_GetRelatedValues"/>
                 </Grid>
             </TabItem>
         </TabControl>
-        <Label Content="OUTPUT:" HorizontalAlignment="Left" Height="24" Margin="416,28,0,0" VerticalAlignment="Top" Width="204" Foreground="LightGray"/>
-        <TextBlock x:Name="txtBlockOutput" Foreground="LightGray" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="424" Height="503" Margin="416,57,0,0" Background="#2F384D"/>
-
-
-
     </Grid>
 </Window>
